--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -14,3 +14,13 @@ a {
 * {
   box-sizing: border-box;
 }
+
+mark {
+  background-color: #e1ffe1;
+  padding: 0 8px;
+  transition: all 0.7s ease;
+
+  &:hover {
+    background-color: #affec7;
+  }
+}
