--- a/src/components/Player/Player.module.scss
+++ b/src/components/Player/Player.module.scss
@@ -2,11 +2,11 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  height: 24px;
 
   div {
     text-align: center;
     flex: 1;
-    border: 1px solid green;
     font-size: 0.8em;
   }
 }
@@ -14,7 +14,11 @@
 .player_name {
   text-align: left !important;
   font-size: 1em !important;
-  min-width: 150px;
+  min-width: 200px;
+}
+
+.player_club {
+  min-width: 120px;
 }
 
 .player_club,
