--- a/src/components/PlayerPool/PlayerPool.module.scss
+++ b/src/components/PlayerPool/PlayerPool.module.scss
@@ -1,7 +1,6 @@
 .pool_container {
   padding: 20px;
   margin: 0 auto;
-  border: 1px solid red;
 }
 
 .pool_header {
@@ -17,6 +16,10 @@
 }
 
 .name {
-  min-width: 150px;
+  min-width: 200px;
   text-align: left !important;
+}
+
+.club {
+  min-width: 120px;
 }
